--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "date-fns": "^2.29.3",
     "react": "18.1.0",
     "react-native": "0.70.6",
-    "react-native-svg": "^13.6.0"
+    "react-native-svg": "^13.6.0",
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
